Added performance interface
Added performance interface to show framerate and frame render times

--- a/imgui.ini
+++ b/imgui.ini
@@ -14,7 +14,12 @@ Size=180,85
 Collapsed=0
 
 [Window][Camera]
-Pos=30,169
-Size=219,224
+Pos=30,165
+Size=219,216
+Collapsed=0
+
+[Window][Performance]
+Pos=30,78
+Size=206,73
 Collapsed=0
 
