--- a/imgui.ini
+++ b/imgui.ini
@@ -14,12 +14,17 @@ Size=180,85
 Collapsed=0
 
 [Window][Camera]
-Pos=30,165
+Pos=30,157
 Size=219,216
 Collapsed=0
 
 [Window][Performance]
 Pos=30,78
-Size=206,73
+Size=219,74
+Collapsed=0
+
+[Window][Controls]
+Pos=31,379
+Size=216,135
 Collapsed=0
 
