Finished Phong shading
Implemented ambient + specular + diffuse lighting shader. Normals should be recalculated after every transformation since rotation etc. makes them incorrect.

--- a/imgui.ini
+++ b/imgui.ini
@@ -28,3 +28,18 @@ Pos=31,379
 Size=216,135
 Collapsed=0
 
+[Window][Spec]
+Pos=997,283
+Size=246,55
+Collapsed=0
+
+[Window][Shader settings]
+Pos=256,79
+Size=239,54
+Collapsed=0
+
+[Window][Light settings]
+Pos=257,141
+Size=238,71
+Collapsed=0
+
