--- a/OpenGL.vcxproj
+++ b/OpenGL.vcxproj
@@ -28,10 +28,10 @@
     <ClCompile Include="includes\imgui\imgui_widgets.cpp" />
     <ClCompile Include="libs\glad.c" />
     <ClCompile Include="src\cubemap.cpp" />
-    <ClCompile Include="src\material.cpp" />
-    <ClCompile Include="src\mesh.cpp" />
     <ClCompile Include="src\input.cpp" />
     <ClCompile Include="src\interface.cpp" />
+    <ClCompile Include="src\material.cpp" />
+    <ClCompile Include="src\mesh.cpp" />
     <ClCompile Include="src\main.cpp" />
     <ClCompile Include="src\renderer.cpp" />
     <ClCompile Include="src\renderObject.cpp" />
@@ -55,6 +55,8 @@
   <ItemGroup>
     <None Include="src\shaders\phong.frag" />
     <None Include="src\shaders\phong.vert" />
+    <None Include="src\shaders\shader2.frag" />
+    <None Include="src\shaders\shader2.vert" />
     <None Include="src\shaders\skybox.frag" />
     <None Include="src\shaders\skybox.vert" />
   </ItemGroup>
