--- a/imgui.ini
+++ b/imgui.ini
@@ -14,7 +14,7 @@ Size=180,85
 Collapsed=0
 
 [Window][Camera]
-Pos=30,163
+Pos=30,164
 Size=219,216
 Collapsed=0
 
@@ -25,7 +25,7 @@ Collapsed=0
 
 [Window][Controls]
 Pos=31,387
-Size=222,137
+Size=220,136
 Collapsed=0
 
 [Window][Spec]
@@ -41,5 +41,10 @@ Collapsed=0
 [Window][Light settings]
 Pos=257,80
 Size=238,71
+Collapsed=0
+
+[Window][Skybox settings]
+Pos=256,401
+Size=238,60
 Collapsed=0
 
