Added infinite grid, mesh indices and more
Added a shader to draw an infinite grid at y=0. The mesh class now supports indices with EBOs. Added F10 key to toggle on/off wireframe drawing mode.

--- a/OpenGL.vcxproj
+++ b/OpenGL.vcxproj
@@ -54,6 +54,8 @@
     <ClInclude Include="src\headers\texture.hpp" />
   </ItemGroup>
   <ItemGroup>
+    <None Include="src\shaders\grid.frag" />
+    <None Include="src\shaders\grid.vert" />
     <None Include="src\shaders\phong.frag" />
     <None Include="src\shaders\phong.vert" />
     <None Include="src\shaders\shader2.frag" />
