Fixed bug with uniform buffer range causing completely non-working program on some OpenGL implementations
Call to glBindBufferRange was incorrect, sending a size of 2 bytes instead of the size of two 4x4 matrices (128 bytes total). This code worked correctly on some OpenGL implementations (GTX 1080 Ti, GT 840M, some Intel HD Graphics iGPU), but not on an Intel Iris Xe with the latest drivers.

--- a/OpenGL.vcxproj
+++ b/OpenGL.vcxproj
@@ -139,6 +139,7 @@
     <IncludePath>C:\Users\razor7877\Desktop\OpenGL\OpenGL\includes;$(IncludePath)</IncludePath>
     <LibraryPath>C:\Users\razor7877\Desktop\OpenGL\OpenGL\libs;$(LibraryPath)</LibraryPath>
     <SourcePath>$(SourcePath)</SourcePath>
+    <OutDir>bin\</OutDir>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
     <LinkIncremental>false</LinkIncremental>
