--- a/imgui.ini
+++ b/imgui.ini
@@ -1,50 +1,48 @@
 [Window][Debug##Default]
 Pos=60,60
 Size=400,400
-Collapsed=0
 
 [Window][Demo window]
 Pos=49,49
 Size=186,98
-Collapsed=0
 
 [Window][Settings]
 Pos=28,58
 Size=180,85
-Collapsed=0
 
 [Window][Camera]
 Pos=5,130
 Size=227,171
-Collapsed=0
 
 [Window][Performance]
 Pos=5,7
 Size=225,118
-Collapsed=0
 
 [Window][Controls]
 Pos=7,308
 Size=228,150
-Collapsed=0
 
 [Window][Spec]
 Pos=997,283
 Size=246,55
-Collapsed=0
 
 [Window][Shader settings]
 Pos=242,9
 Size=238,127
-Collapsed=0
 
 [Window][Light settings]
 Pos=243,214
 Size=239,330
-Collapsed=0
 
 [Window][Skybox settings]
 Pos=243,146
 Size=238,60
-Collapsed=0
+
+[Window][Node details]
+Pos=244,549
+Size=236,197
+
+[Window][Scene graph]
+Pos=5,468
+Size=229,191
 
