Some refactoring and updated CMakeLists to have correct directory structure

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,4 +1,4 @@
-cmake_minimum_required(VERSION 3.28)
+cmake_minimum_required(VERSION 3.24)
 project(VectorGL)
 
 set(CMAKE_CXX_STANDARD 17)
@@ -10,12 +10,44 @@ add_subdirectory(libs/assimp EXCLUDE_FROM_ALL)
 add_subdirectory(libs/glfw EXCLUDE_FROM_ALL)
 add_subdirectory(libs/glm EXCLUDE_FROM_ALL)
 
-# Recursively find all source files
-file(GLOB_RECURSE sources src/*(.c|cpp) includes/*(.h/.hpp))
+# Find all source files
+file(GLOB MAIN_SRC "src/*.c" "src/*.cpp")
+file(GLOB COMPONENTS_SRC "src/components/*.c" "src/components/*.cpp")
+file(GLOB COMPONENTS_LIGHTS_SRC "src/components/lights/*.c" "src/components/lights/*.cpp")
+file(GLOB IO_SRC "src/io/*.c" "src/io/*.cpp")
+file(GLOB KHR_SRC "src/KHR/*.c" "src/KHR/*.cpp")
+file(GLOB LIGHTS_SRC "src/lights/*.c" "src/lights/*.cpp")
+file(GLOB UTILITIES_SRC "src/utilities/*.c" "src/utilities/*.cpp")
+
+# Find all header files
+file(GLOB MAIN_INCLUDES "includes/*.h" "includes/*.hpp")
+file(GLOB COMPONENTS_INCLUDES "includes/components/*.h" "includes/components/*.hpp")
+file(GLOB COMPONENTS_LIGHTS_INCLUDES "includes/components/lights/*.h" "includes/components/lights/*.hpp")
+file(GLOB IO_INCLUDES "includes/io/*.h" "includes/io/*.hpp")
+file(GLOB KHR_INCLUDES "includes/KHR/*.h" "includes/KHR/*.hpp")
+file(GLOB LIGHTS_INCLUDES "includes/lights/*.h" "includes/lights/*.hpp")
+file(GLOB UTILITIES_INCLUDES "includes/utilities/*.h" "includes/utilities/*.hpp")
+
+message(STATUS "C files: ${COMPONENTS_INCLUDES}")
 
 # Add sources to target
-add_executable(VectorGL ${sources})
-target_sources(VectorGL PUBLIC
+add_executable(VectorGL
+	${MAIN_SRC}
+	${COMPONENTS_SRC}
+	${COMPONENTS_LIGHTS_SRC}
+	${IO_SRC}
+	${KHR_SRC}
+	${LIGHTS_SRC}
+	${UTILITIES_SRC}
+
+	${MAIN_INCLUDES}
+	${COMPONENTS_INCLUDES}
+	${COMPONENTS_LIGHTS_INCLUDES}
+	${IO_INCLUDES}
+	${KHR_INCLUDES}
+	${LIGHTS_INCLUDES}
+	${UTILITIES_INCLUDES}
+
 	libs/ImGui/imgui.cpp
 	libs/ImGui/imgui_demo.cpp
 	libs/ImGui/imgui_draw.cpp
@@ -25,6 +57,22 @@ target_sources(VectorGL PUBLIC
 	libs/ImGui/imgui_widgets.cpp
 	libs/ImGui/misc/cpp/imgui_stdlib.cpp
 )
+
+source_group("src" FILES ${MAIN_SRC})
+source_group("src\\components" FILES ${COMPONENTS_SRC})
+source_group("src\\components\\lights" FILES ${COMPONENTS_LIGHTS_SRC})
+source_group("src\\io" FILES ${IO_SRC})
+source_group("src\\KHR" FILES ${KHR_SRC})
+source_group("src\\lights" FILES ${LIGHTS_SRC})
+source_group("src\\utilities" FILES ${UTILITIES_SRC})
+
+source_group("includes" FILES ${MAIN_INCLUDES})
+source_group("includes\\components" FILES ${COMPONENTS_INCLUDES})
+source_group("includes\\components\\lights" FILES ${COMPONENTS_LIGHTS_INCLUDES})
+source_group("includes\\io" FILES ${IO_INCLUDES})
+source_group("includes\\KHR" FILES ${KHR_INCLUDES})
+source_group("includes\\lights" FILES ${LIGHTS_INCLUDES})
+source_group("includes\\utilities" FILES ${UTILITIES_INCLUDES})
 
 # Add header files
 target_include_directories(VectorGL PUBLIC
