--- a/.gitmodules
+++ b/.gitmodules
@@ -10,3 +10,6 @@
 [submodule "libs/ImGui"]
 	path = libs/ImGui
 	url = https://github.com/ocornut/imgui.git
+[submodule "libs/ImGuiColorTextEdit"]
+	path = libs/ImGuiColorTextEdit
+	url = https://github.com/BalazsJako/ImGuiColorTextEdit
