Reworking interface with ImGui docking branch, also updated other submodules

--- a/imgui.ini
+++ b/imgui.ini
@@ -19,7 +19,7 @@ Pos=5,7
 Size=225,118
 
 [Window][Controls]
-Pos=7,308
+Pos=4,134
 Size=228,150
 
 [Window][Spec]
@@ -39,14 +39,22 @@ Pos=243,146
 Size=238,60
 
 [Window][Node details]
-Pos=244,549
+Pos=244,145
 Size=236,197
 
 [Window][Scene graph]
-Pos=5,468
+Pos=4,291
 Size=229,191
 
 [Window][Viewer]
-Pos=546,82
+Pos=489,11
 Size=1144,745
+
+[Window][Console]
+Pos=22,765
+Size=918,216
+
+[Window][Shader editor]
+Pos=1643,12
+Size=800,600
 
