--- a/.gitmodules
+++ b/.gitmodules
@@ -10,6 +10,7 @@
 [submodule "libs/ImGui"]
 	path = libs/ImGui
 	url = https://github.com/ocornut/imgui.git
+	branch = docking
 [submodule "libs/ImGuiColorTextEdit"]
 	path = libs/ImGuiColorTextEdit
 	url = https://github.com/BalazsJako/ImGuiColorTextEdit
