Improved layout and fixed some viewer resize bugs

--- a/imgui.ini
+++ b/imgui.ini
@@ -1,60 +1,101 @@
 [Window][Debug##Default]
 Pos=60,60
 Size=400,400
+Collapsed=0
 
 [Window][Demo window]
 Pos=49,49
 Size=186,98
+Collapsed=0
 
 [Window][Settings]
 Pos=28,58
 Size=180,85
+Collapsed=0
 
 [Window][Camera]
 Pos=5,130
 Size=227,171
+Collapsed=0
 
 [Window][Performance]
-Pos=5,7
-Size=225,118
+Pos=8,8
+Size=278,339
+Collapsed=0
+DockId=0x0000000A,1
 
 [Window][Controls]
-Pos=4,134
-Size=228,150
+Pos=8,8
+Size=278,339
+Collapsed=0
+DockId=0x0000000A,2
 
 [Window][Spec]
 Pos=997,283
 Size=246,55
+Collapsed=0
 
 [Window][Shader settings]
-Pos=242,9
-Size=238,127
+Pos=8,8
+Size=278,339
+Collapsed=0
+DockId=0x0000000A,0
 
 [Window][Light settings]
 Pos=243,214
 Size=239,330
+Collapsed=0
 
 [Window][Skybox settings]
 Pos=243,146
 Size=238,60
+Collapsed=0
 
 [Window][Node details]
-Pos=244,145
-Size=236,197
+Pos=8,349
+Size=278,336
+Collapsed=0
+DockId=0x0000000B,0
 
 [Window][Scene graph]
-Pos=4,291
-Size=229,191
+Pos=8,687
+Size=278,682
+Collapsed=0
+DockId=0x00000009,0
 
 [Window][Viewer]
-Pos=489,11
-Size=1144,745
+Pos=288,8
+Size=1646,1147
+Collapsed=0
+DockId=0x00000004,0
 
 [Window][Console]
-Pos=22,765
-Size=918,216
+Pos=288,1157
+Size=2264,212
+Collapsed=0
+DockId=0x00000003,0
 
 [Window][Shader editor]
-Pos=1643,12
-Size=800,600
+Pos=1936,8
+Size=616,1147
+Collapsed=0
+DockId=0x00000005,0
+
+[Window][Main Window]
+Pos=0,0
+Size=2560,1377
+Collapsed=0
+
+[Docking][Data]
+DockSpace       ID=0xF97EAFDC Window=0x8FE86BE8 Pos=8,8 Size=2544,1361 Split=X Selected=0x652D1CFE
+  DockNode      ID=0x00000001 Parent=0xF97EAFDC SizeRef=278,1064 Split=Y Selected=0xF5BE1C77
+    DockNode    ID=0x00000008 Parent=0x00000001 SizeRef=212,529 Split=Y Selected=0x30ED4B54
+      DockNode  ID=0x0000000A Parent=0x00000008 SizeRef=212,265 Selected=0x60B79D0E
+      DockNode  ID=0x0000000B Parent=0x00000008 SizeRef=212,262 Selected=0x7B48E3C3
+    DockNode    ID=0x00000009 Parent=0x00000001 SizeRef=212,533 Selected=0xF5BE1C77
+  DockNode      ID=0x00000007 Parent=0xF97EAFDC SizeRef=1624,1064 Split=Y
+    DockNode    ID=0x00000002 Parent=0x00000007 SizeRef=1213,1147 Split=X Selected=0x652D1CFE
+      DockNode  ID=0x00000004 Parent=0x00000002 SizeRef=1646,796 CentralNode=1 Selected=0x652D1CFE
+      DockNode  ID=0x00000005 Parent=0x00000002 SizeRef=616,796 Selected=0x9A45A5E0
+    DockNode    ID=0x00000003 Parent=0x00000007 SizeRef=1213,212 Selected=0x49278EEE
 
