PBR shader seems mostly working, started refactoring code to handle different materials

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -17,6 +17,7 @@ file(GLOB COMPONENTS_LIGHTS_SRC "src/components/lights/*.c" "src/components/ligh
 file(GLOB IO_SRC "src/io/*.c" "src/io/*.cpp")
 file(GLOB KHR_SRC "src/KHR/*.c" "src/KHR/*.cpp")
 file(GLOB LIGHTS_SRC "src/lights/*.c" "src/lights/*.cpp")
+file(GLOB MATERIALS_SRC "src/materials/*.c" "src/materials/*.cpp")
 file(GLOB UTILITIES_SRC "src/utilities/*.c" "src/utilities/*.cpp")
 
 # Find all header files
@@ -26,6 +27,7 @@ file(GLOB COMPONENTS_LIGHTS_INCLUDES "includes/components/lights/*.h" "includes/
 file(GLOB IO_INCLUDES "includes/io/*.h" "includes/io/*.hpp")
 file(GLOB KHR_INCLUDES "includes/KHR/*.h" "includes/KHR/*.hpp")
 file(GLOB LIGHTS_INCLUDES "includes/lights/*.h" "includes/lights/*.hpp")
+file(GLOB MATERIALS_INCLUDES "includes/materials/*.h" "includes/materials/*.hpp")
 file(GLOB UTILITIES_INCLUDES "includes/utilities/*.h" "includes/utilities/*.hpp")
 
 message(STATUS "C files: ${COMPONENTS_INCLUDES}")
@@ -38,6 +40,7 @@ add_executable(VectorGL
 	${IO_SRC}
 	${KHR_SRC}
 	${LIGHTS_SRC}
+	${MATERIALS_SRC}
 	${UTILITIES_SRC}
 
 	${MAIN_INCLUDES}
@@ -46,6 +49,7 @@ add_executable(VectorGL
 	${IO_INCLUDES}
 	${KHR_INCLUDES}
 	${LIGHTS_INCLUDES}
+	${MATERIALS_INCLUDES}
 	${UTILITIES_INCLUDES}
 
 	libs/ImGuiColorTextEdit/TextEditor.cpp
@@ -67,6 +71,7 @@ source_group("src\\components\\lights" FILES ${COMPONENTS_LIGHTS_SRC})
 source_group("src\\io" FILES ${IO_SRC})
 source_group("src\\KHR" FILES ${KHR_SRC})
 source_group("src\\lights" FILES ${LIGHTS_SRC})
+source_group("src\\materials" FILES ${MATERIALS_SRC})
 source_group("src\\utilities" FILES ${UTILITIES_SRC})
 
 source_group("includes" FILES ${MAIN_INCLUDES})
@@ -75,6 +80,7 @@ source_group("includes\\components\\lights" FILES ${COMPONENTS_LIGHTS_INCLUDES})
 source_group("includes\\io" FILES ${IO_INCLUDES})
 source_group("includes\\KHR" FILES ${KHR_INCLUDES})
 source_group("includes\\lights" FILES ${LIGHTS_INCLUDES})
+source_group("includes\\materials" FILES ${MATERIALS_INCLUDES})
 source_group("includes\\utilities" FILES ${UTILITIES_INCLUDES})
 
 # Add header files
